--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "express": "^4.16.3",
+    "jsonwebtoken": "^8.3.0",
     "node-fetch": "^2.2.0"
   },
   "engines": {
