--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "jsonwebtoken": "^8.3.0",
-    "node-fetch": "^2.2.0"
+    "node-fetch": "^2.2.0",
+    "request": "^2.88.0"
   },
   "engines": {
     "node": "8.x"
