--- a/package.json
+++ b/package.json
@@ -6,16 +6,15 @@
   "scripts": {
     "start": "node server.js"
   },
-  "dependencies": {
-    "express": "^4.16.3",
-    "jsonwebtoken": "^8.3.0",
-    "multer": "^1.4.1",
-    "node-fetch": "^2.2.0",
-    "request": "^2.88.0"
-  },
   "engines": {
     "node": "8.x"
   },
   "license": "MIT",
-  "repository": "github:SardonyxApp/sardonyx-server"
+  "author": "SardonyxApp",
+  "repository": "github:SardonyxApp/sardonyx-server",
+  "dependencies": {
+    "express": "^4.16.3",
+    "multer": "^1.4.1",
+    "request": "^2.88.0"
+  }
 }
