--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "Backend server for Sardonyx.",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "dev": "webpack-dev-server --mode development",
+    "webpack": "webpack --mode production",
+    "server": "nodemon server",
+    "start": "concurrently \"npm run dev\" \"npm run server\"",
+    "build": "npm run webpack && npm run server"
   },
   "engines": {
     "node": "8.x"
@@ -13,8 +17,27 @@
   "author": "SardonyxApp",
   "repository": "github:SardonyxApp/sardonyx-server",
   "dependencies": {
+    "@babel/polyfill": "^7.0.0",
+    "dotenv": "^6.1.0",
     "express": "^4.16.3",
     "multer": "^1.4.1",
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
     "request": "^2.88.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.1.6",
+    "@babel/preset-env": "^7.1.6",
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.4",
+    "concurrently": "^4.0.1",
+    "css-loader": "^1.0.1",
+    "file-loader": "^2.0.0",
+    "html-webpack-plugin": "^3.2.0",
+    "nodemon": "^1.18.6",
+    "style-loader": "^0.23.1",
+    "webpack": "^4.25.1",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10"
   }
 }
