--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "Backend server for Sardonyx.",
   "main": "server.js",
   "scripts": {
-    "dev": "webpack-dev-server --mode development",
-    "webpack": "webpack --mode production",
-    "server": "nodemon server",
-    "start": "concurrently \"npm run dev\" \"npm run server\"",
-    "build": "npm run webpack && npm run server"
+    "client-dev": "webpack-dev-server --mode development",
+    "client": "webpack --mode production",
+    "server-dev": "nodemon server",
+    "start": "node server",
+    "dev": "concurrently \"npm run cliengt\" \"npm start\"",
+    "build": "npm run webpack && npm start"
   },
   "engines": {
     "node": "8.x"
