--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "server-dev": "nodemon server",
     "start": "node server",
     "dev": "concurrently \"npm run client-dev\" \"npm run server-dev\"",
-    "build": "npm run client && npm start"
+    "build": "npm run client && npm start",
+    "test": "jest --detectOpenHandles"
   },
   "engines": {
     "node": "8.x"
@@ -30,15 +31,19 @@
     "@babel/core": "^7.1.6",
     "@babel/preset-env": "^7.1.6",
     "@babel/preset-react": "^7.0.0",
+    "babel-core": "^7.0.0-bridge.0",
     "babel-loader": "^8.0.4",
     "concurrently": "^4.0.1",
     "css-loader": "^1.0.1",
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^23.6.0",
     "node-sass": "^4.10.0",
     "nodemon": "^1.18.6",
+    "regenerator-runtime": "^0.13.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
+    "supertest": "^3.3.0",
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
