--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "repository": "github:SardonyxApp/sardonyx-server",
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
+    "cheerio": "^1.0.0-rc.2",
     "dotenv": "^6.1.0",
     "express": "^4.16.3",
     "multer": "^1.4.1",
@@ -39,7 +40,7 @@
     "html-webpack-plugin": "^3.2.0",
     "jest": "^23.6.0",
     "node-sass": "^4.10.0",
-    "nodemon": "^1.18.6",
+    "nodemon": "^1.18.7",
     "regenerator-runtime": "^0.13.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
