--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "repository": "github:SardonyxApp/sardonyx-server",
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
+    "cheerio": "^1.0.0-rc.2",
     "dotenv": "^6.1.0",
     "express": "^4.16.3",
     "multer": "^1.4.1",
