--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "multer": "^1.4.1",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "showdown": "^1.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.1.6",
