--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^6.1.0",
     "express": "^4.16.3",
     "multer": "^1.4.1",
+    "mysql": "^2.16.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "request": "^2.88.0",
