--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cheerio": "^1.0.0-rc.2",
     "dotenv": "^6.1.0",
     "express": "^4.16.3",
+    "jsonwebtoken": "^8.5.0",
     "multer": "^1.4.1",
     "mysql": "^2.16.0",
     "react": "^16.6.3",
