--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
     "cheerio": "^1.0.0-rc.2",
+    "cookie-parser": "^1.4.4",
     "dotenv": "^6.1.0",
     "express": "^4.16.3",
     "jsonwebtoken": "^8.5.0",
