Add basic support for IE

--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "request": "^2.88.0",
-    "showdown": "^1.9.0"
+    "showdown": "^1.9.0",
+    "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.1.6",
