--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Backend server for Sardonyx.",
   "main": "server.js",
   "scripts": {
-    "client-dev": "webpack-dev-server --mode development",
+    "client-dev": "webpack --watch",
     "client": "webpack --mode production",
     "server-dev": "nodemon server",
     "start": "node server",
@@ -52,7 +52,6 @@
     "style-loader": "^0.23.1",
     "supertest": "^3.3.0",
     "webpack": "^4.25.1",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.14"
+    "webpack-cli": "^3.1.2"
   }
 }
