--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "multer": "^1.4.1",
     "mysql": "^2.16.0",
     "react": "^16.6.3",
+    "react-color": "^2.17.0",
     "react-datepicker": "^2.2.0",
     "react-dom": "^16.6.3",
     "request": "^2.88.0",
