--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "react-dom": "^16.6.3",
     "request": "^2.88.0",
     "showdown": "^1.9.0",
+    "socket.io": "^2.2.0",
+    "socket.io-client": "^2.2.0",
     "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
