--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sardonyx",
-  "version": "1.0.3-beta.1",
+  "version": "1.1.0",
   "description": "Full stack web app for Sardonyx.",
   "main": "server.js",
   "scripts": {
