--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "repository": "github:SardonyxApp/sardonyx-server",
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
+    "bcrypt": "^3.0.6",
     "cheerio": "^1.0.0-rc.2",
     "cookie-parser": "^1.4.4",
     "dotenv": "^6.1.0",
